Attempted to fix page-break printout problem on Safari

--- a/css/index.css
+++ b/css/index.css
@@ -1128,12 +1128,11 @@ section {
     .break-inside--avoid {
         break-inside: avoid-page;
         display: inline-block; /* Make element unbreakable for Safari */
-        direction: ltr;
+        margin: 2rem;
     }
 
     .flex-row-wrap {
         display: table; /* Workaround for Safari */
-        direction: rtl;
     }
 
     .card {
